# Quant_project

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb  test_2.ipynb  tweets.db
etl/: data_model.py  extract.py  models.py  transform.py  transform_spacy.py
tests/: test_models.py  test_transform.py
utils/: functions.py  logger.py  plots.py
