[project]
name = "quant-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "alpaca-py>=0.39.1",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "lxml-html-clean>=0.4.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "statsmodels>=0.14.4",
    "vadersentiment>=3.3.2",
    "wheel>=0.45.1",
    "yfinance>=0.2.55",
]
